--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -180,7 +180,7 @@
         bottom: 0;
         z-index: 0;
         width: 100%;
-        height: 90px;
+        height: 90%;
     }
 
     @media screen and (max-width:1200px) {
