--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -42,6 +42,8 @@
     justify-content: flex-start;
     align-items: flex-start;
     height: 100%;
+    
+    
 
     @media screen and(max-width:2000px) {
         width: 100%;
@@ -124,6 +126,10 @@
     }
 
     div:nth-child(3){
+        width: 70px;
+        height: 70px;
+    }
+    div:nth-child(4){
         width: 70px;
         height: 70px;
     }
